--- a/Schedule.Rmd
+++ b/Schedule.Rmd
@@ -12,7 +12,7 @@ library(readr)
 ```{r include = FALSE}
 rawdat <- read_csv(file.path("admin", "lecture-notes.csv"))
 cdat <- rawdat %>% mutate(Date = format(as.Date(date, "%m/%d/%Y"), "%m/%d"), 
-                          Week = as.numeric(str_extract(wk, "([0-9]{2})")), 
+                          Week = paste("Week ", as.numeric(str_extract(wk, "([0-9]{2})")), "-", day, sep=""), 
                           notes = ifelse(grepl("^wk", wk) & raw_notes != "",
                                   sprintf("%s: %s", wk, raw_notes), raw_notes))
 #glimpse(cdat)
@@ -42,5 +42,5 @@ table {
 ## Math 456: Applied Statistics II (Subject to adjustment)
 
 ```{r results = 'asis', echo = FALSE}
-knitr::kable(cdat %>% select(Week, Date, Notes))
+knitr::kable(cdat %>% select(Week, Date, Notes, Reading))
 ```
