--- a/notes/lec02_data_prep.Rmd
+++ b/notes/lec02_data_prep.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Preparing Data for Analysis"
 author: "MATH 456"
-date: "1/25/2016"
+date: "Week 1"
 output:
   ioslides_presentation:
     highlight: pygments
@@ -101,11 +101,16 @@ head(iris[c(1,2,3,5)])
 The `reshape2` and `tidyr` packages contain common functions and methods used to create tidy data. 
 
 ## Practice
-The US Census can provide a lot of demographic and economic information organized by geographical regions across the united states. A lot of information is available, but it is typically not in an analyzable format. You are going to download some Census data on poverty rates in CA, create a codebook and start to tidy the data to make it into an analyzable format. 
+The US Census can provide a lot of demographic and economic information organized by geographical regions across the united states. A lot of information is available, but it is typically not in an analyzable format. 
 
+You are going to download some Census data on poverty rates in CA, create a codebook and start to tidy the data to make it into an analyzable format. 
+
+## Practice
 1. Go [here](https://cdph.data.ca.gov/Demographics/Poverty-Rate-defined-by-U-S-Census-by-California-R/pbut-di2i) and download (export) the data on Poverty rates by California regions from 2000-2010. Store this in your DATA folder.
+2.  Click on the red "About" button - Under _Attachments_ download the data dictionary (XLSX file) and the Narrative Examples pdf. 
 3. Download a copy of the NCBirths codebook Markdown template from the [Data page](../data/Datasets.html) of the class website. 
 4. Using this template, start to create a codebook for this data using the information available on the website. Be sure to include a description of the data. 
+5. Variables to include: `reportyear, race_eth_name, geotype, county_name, region_name, Poverty, TotalPop, NumPov, CA_RR`
 
 
 ## Processing Data
@@ -120,15 +125,20 @@ Once the data has been collected, there are a number of steps that must occur be
 ## Missing data identified
 * Missing data in `R` is denoted as `NA`
 * Arithmetic functions on missing data will return missing
-```{r}
+```{r, echo=2:3}
 library(MASS)
 head(survey$Pulse)
 mean(survey$Pulse)
 ```
 
-* The `summary()` function will alway show missing.
+## Missing data identified (cont.) 
+The `summary()` function will alway show missing.
 ```{r}
 summary(survey$Pulse)
+```
+The `is.na()` function is helpful to identify rows with missing data
+```{r}
+table(is.na(survey$Pulse))
 ```
 
 ## Missing data identified (cont.)
@@ -141,17 +151,30 @@ Look at `?table` for other options to the `useNA` argument.
 
 
 ## Dealing with missing data - Option 1
-* Complete case analysis
-    - Ignore it. Drop all records with missing data
-    - Do this for now.
-```{r}
-mean(survey$Pulse, na.rm=TRUE) # complete case on a single variable
-survey <- survey[!is.na(survey$Pulse),]
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 library(dplyr)
-survey <- survey %>% !is.na(Pulse) 
-survey <- na.omit(survey)
 ```
+* Complete case analysis: Drop all records with missing data
+    - We will use this option for now.
+```{r, warning=FALSE, message=FALSE}
+# complete case function on a single variable
+mean(survey$Pulse, na.rm=TRUE) 
+```
+Drop entire records that are missing values on the variable of interest. 
+`dim(survey)` = `r dim(survey)`
+```{r}
+survey1 <- survey[!is.na(survey$Pulse),] 
+survey2 <- survey %>% filter(!is.na(Pulse)) 
+```
+`dim(survey1)` = `r dim(survey1)`  
+`dim(survey2)` = `r dim(survey2)`
 
+## Dealing with missing data - Option 1 (cont.)
+Or drop ALL rows with missing on ANY variable
+```{r, warning=FALSE, message=FALSE}
+survey3 <- na.omit(survey) 
+dim(survey3)
+```
 
 ## Dealing with missing data - Option 2
 * Imputation. 
@@ -160,19 +183,36 @@ survey <- na.omit(survey)
     - Will cover imputation methods later 
 
 ## Outliers identified
-
-
+Typically identified using graphical methods. 
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+library(ggplot2); library(gridExtra)
+a <- qplot(y=Pulse, x=1,data=survey, geom="boxplot")
+b <- qplot(1:NROW(survey), Pulse, data=survey, geom="point")
+grid.arrange(a,b,ncol=2)
+```
 
 ## Data edited to recode missing or outling values
+Data editing is changing the value of the raw data from one value to another based on a set of pre-defined deterministic criteria.  (Review `?ifelse`)
+```{r}
+survey$M.I.2 <- ifelse(is.na(survey$M.I), "Unknown", survey$M.I)
+table(survey$M.I, survey$M.I.2)
+survey$Pulse <- ifelse(survey$Pulse > 100, 100, survey$Pulse)
+```
+
+## New variables created using transformations of existing variables
+Using the `mutate` argument from `dplyr` to calculate BMI on the `women` data set bulit into R. 
+```{r}
+women <- women %>% mutate(bmi = (weight*703)/(height^2))
+head(women)
+```
 
 
-
-
-## New varaibles created using transformations of existing variables
-
-
-
-## Reshaping data to create Tidy Data
+## Practice: Cleaning the US Census data continued. 
+1. Use `filter` to drop data on the census tract level, and aggregated report years 2006-10 
+    - `geotype!=CT, Poverty != "Concentrated", reportyear != "2006-2010"`
+2. Use `mutate` to rename `percent` to `PctPov` and `Poverty` to `PovType`.
+3. Use `select` to only keep the following variables: `reportyear, race_eth_name, geotype, county_name, region_name, PovType, TotalPop, NumPov, PctPov, CA_RR`.
+    - Make sure these variables are accurate in your codebook. 
 
 
 
