change to weekly structure

--- a/Syllabus.Rmd
+++ b/Syllabus.Rmd
@@ -26,23 +26,23 @@ From the CSUC Course Catalog: Advanced topics in applied statistics including mu
 ## Course Content Learning Outcomes
 Upon successful completion of this course, students will be able to:  
 
-* Understand the value of, and be able to create a codebook / data dictionary. 
 * Translate a research question into an appropriate statistical analysis plan. 
 * Prepare data for analysis by cleaning and transforming raw data. 
-* Perform select statistical analyses in a reproducible manner. 
-* Interpret the results of the statistical analysis in plain language. 
-* Use model selection techniques to build predictive models for continuous and categorical data types. 
+* Perform research in a reproducible manner. 
+* Build statistical models to examine real processes. 
+* Report the results of the analysis in plain language. 
+
 
 ## Required Materials
 #### Textbooks
 Practical Multivariate Analysis 5th Edition. Afifi, May, Clark ISBN 9781439816806  
--- 4th Edition will be OK, but the discussion of software is outdated and it does not include R. 
+You can use the promo code **LEARN** at www.crcpress.com  to save 25% off of the textbook or any other CRC Press book they need for the semester. This special, student discount is only available through this offer for the upcoming spring semester.
 
 #### Computer Hardware and Software 
 We will be using the statistical programming language R. You are expected to have prior experience with this language. 
 Loaner laptops will be available for you to use during class time only. These systems will be set up properly and ready to go on day 1. You will eventually have to set up and bring your own laptop to class. There will not be sufficient time during class for you to complete the necessary work. All software programs we will use are free.  
 
-Download and install the following software within the first two weeks of class. We will not *really* be using LaTeX but having this installed will allow for the creation of work in PDF format. 
+Download and install the following software within the first two weeks of class.
 
   - **R** http://cran.r-project.org/
   - **R-Studio** http://www.rstudio.com/products/rstudio/download/
@@ -58,27 +58,31 @@ Here is a [slide deck](notes/xtra01_InstallPrograms.html) containing instruction
 3) Plan on enrolling in the in-person version of this R Bootcamp at the start of the semester. This will be 2 hour classes, 2 nights/week, for the first 3 weeks. Specific enrollment details will be announced as they are finalized. 
 
 ## Online Component
-Blackboard Learn will be used for submission of assignments only. All course materials can be found on the course
-website listed at the top of this page. You are responsible for regularly checking the website for updates and announcements. The daily class schedule can be found [here](Schedule.html). This is an experimental course, so the list of topics and timings are subject to change. It is your responsibility to be aware of the current schedule. 
-
-[Piazza](https://piazza.com/mail.csuchico.edu/spring2016/math456). We will be using Piazza as the place for discussion outside of class. 
+* All course materials can be found on the [course website](http://norcalbiostat.github.io/MATH456/).  
+* We will use Google Drive for assignment submission. Grade records may or may not be done via BBLearn.   
+* We will be using [Piazza](https://piazza.com/mail.csuchico.edu/spring2016/math456) as the place for discussion outside of class.   
+* You are responsible for regularly checking Piazza for updates and announcements.  
+* The daily class schedule can be found on the class website [here](Schedule.html).  
+* It is your responsibility to be aware of the current schedule.  
 
 
 ## Assignments and Grading Policy
-The majority of the points available come from Exams and projects. 
-
 Practice problems will be assigned regularly and will be worked on during and outside of class time. An open note quiz will be administered at appropriate intervals, typically a day or two after a section or topic has been completed. Quiz questions will directly come from the practice problems, so it is in your best interest to have all problems completed and well-organized. 
 
 You will also be expected to participate in discussions during class, and outside of class on the forum board. 
 
 No Late work accepted without prior approval. 
 
-**Weights**: Midterm 15%, Final 15%; Projects (2): 20% each; Quizzes 15%; Participation 15%
+**Weights**:  Quizzes 15%; Participation 15%; Homework 20%; Midterm Report 25%; Final Report 25%  
 **Letter grade**: A [95-100), A- [90-94), B+ [87, 89), B [83-86), B- [80, 82), C+ [77-79), C [73-76), C- [79, 72), D+ [65, 69), D [60, 64), F < 60
 
 
 ### Time Commitment
+CSUC and Federal policy states that "One hour of classroom or direct faculty instruction and a minimum of two hours of out-of-class student work each  week for approximately fifteen weeks for one semester hour of credit".  
+
 It is not easy to write literate computer programs but the payoff is immeasurable. You will spend 3 hours in class discussing topics and working on code. Expect to spend around 6 hours outside of class to read, write, code and problem solve. For the best chance of success start assignments early, use the discussion forms, form study groups and come to office hours. You will get out of this class what you put into it.
+
+Completing the required readings and starting to work out problems in R prior to class time will make for a much more productive and useful class meeting time. We only have 50 minutes face to face, plan on making the most of it. 
 
 ## Getting Help
 * Your first resource is each other. 
