--- a/blankweek.Rmd
+++ b/blankweek.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Week X - "
+title: "Week X"
 author: "MATH 456, Spring 2016"
 date: " xx"
 output: 
@@ -15,7 +15,9 @@ output:
 
 # Notes
 
+
 # Experience 
+
 
 # Data 
 
@@ -23,3 +25,4 @@ output:
 # Practice 
 
 
+# Submit 
